PR/47068: unifdef(1) with cpp directive on last line without newline Remove bogus test; if there is no newline, the state does not change.